# ksystemstats-intel-npu

./: .gitignore  CMakeLists.txt  README.md
autotests/: intelnpubackendtest.cpp
src/: intelnpubackend.cpp  intelnpubackend.h  intelnpuplugin.cpp  intelnpuplugin.h  intelnpuplugin.json
